Fix alignment of shopping cart prices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -215,6 +215,11 @@ main {
   cursor: pointer;
 }
 
+.price {
+  display: inline-block;
+  width: 50px;
+  text-align: right;
+}
 
 /*** MEDIA QUERIES ***/
 
